# PSV-project

./: .gitignore  E.gcl  README.md  benchmark  blockShadowTest.gcl  build.sh  cabal.project  infeasible.gcl  one  run.sh  test.gcl  test_increase.gcl  tmp.gcl  very simple.gcl  without.csv  wlp-verifier.cabal
.devcontainer/: Dockerfile
app/: Main.hs
benchmarks/: memberOf.gcl
benchmarks/invalid/: bsort.gcl  divByN.gcl  memberOf.gcl  pullUp.gcl
benchmarks/valid/: bsort.gcl  divByN.gcl  memberOf.gcl  pullUp.gcl
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/src/: gclparser-9eb3b36610aa5002.cache
src/: Algebra.hs  Builder.hs  Cli.hs  Example.hs  Expr.hs  LoopInvariant.hs  Main.hs  Runner.hs  Statement.hs  TreeBuilder.hs  Util.hs  WLP.hs  Z3Instance.hs  Z3Util.hs  treeBuilder.hs
test/: Main.hs
