cabal-version:      3.0
name:               wlp-verifier
version:            0.1.0.0
build-type:         Simple


library lib-verifier
  ghc-options:      -Wall -O2

  exposed-modules:  Cli
                  , WLP
                  , TreeBuilder
                  , Expr
                  , Statement
                  , Util
                  , Z3Util
                  , Z3Instance
                  , Runner

  -- other-extensions:

  build-depends:    base                  ^>= 4.17.2.1
                  , z3                    ^>= 408.2
                  , optparse-applicative  ^>= 0.18.1
                  , mtl                   ^>= 2.2.2
                  , recursion-schemes     ^>= 5.2.3
                  , dlist
                  , GCLparser

  hs-source-dirs:   src

  default-language: Haskell2010


executable test-verifier
  ghc-options:      -Wall -O2 -fproc-alignment=64

  main-is:          Main.hs

  build-depends:    base          ^>= 4.17.2.1
                  , mtl
                  , tasty         ^>= 1.5
                  , tasty-hunit
                  , tasty-bench   ^>= 0.4
                  , lib-verifier
                  , GCLparser

  -- other-extensions:

  hs-source-dirs:   test

  default-language: Haskell2010


executable wlp-verifier
  ghc-options:      -Wall -O2

  main-is:          Main.hs

  build-depends:    base          ^>= 4.17.2.1
                  , z3            ^>= 408.2
                  , mtl           ^>= 2.2.2
                  , pretty-simple ^>= 4.1.2
                  , time          ^>= 1.12.2
                  , lib-verifier
                  , GCLparser

  -- other-extensions:

  hs-source-dirs:   app

  default-language: Haskell2010
